--- a/index.html
+++ b/index.html
@@ -28,5 +28,17 @@
     </div>
 
     <script src="assets/js/script.js"></script>
+    <div id="order-modal" class="modal-overlay hidden">
+    <div class="modal-content">
+        <div class="modal-icon">✅</div>
+        <h2>¡PEDIDO RECIBIDO!</h2>
+        <p>Retira tu ticket y espera tu turno.</p>
+        <div class="order-number-box">
+            <span>TU NÚMERO ES:</span>
+            <h1 id="order-number">#00</h1>
+        </div>
+        <button onclick="closeModal()" class="btn-close">NUEVO PEDIDO</button>
+    </div>
+</div>
 </body>
 </html>
